# SOC-pySigma-backend-ala-rule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/alarule/: __init__.py  alarule.py
sigma/pipelines/alarule/: __init__.py  alarule.py
tests/: test_backend_alarule.py  test_pipelines_alarule.py
