[tool.poetry]
name = "pySigma-backend-alarule"
version = "0.1.0"
description = "pySigma ala-rule backend"
authors = ["tungdr4 <tungdr4@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/tungdr4/pySigma-backend-alarule"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
